--- a/deployment.yaml
+++ b/deployment.yaml
@@ -56,7 +56,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image:  my-app:latest
+        image:  anas999/my-app:latest
         ports:
         - containerPort: 3000
         env:
@@ -94,7 +94,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image:  my-app2:latest
+        image:  anas999/my-app2:latest
         ports:
         - containerPort: 3001
 ---
