--- a/deployment.yaml
+++ b/deployment.yaml
@@ -74,7 +74,7 @@ spec:
     - protocol: TCP
       port: 3000
       targetPort: 3000
-  type: ClusterIP
+  type: NodePorte
 
 # Frontend Deployment and Service
 ---
